Version Changes for Hypermail

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Jose Kahan (jose@w3.org) (October 2, 2002)
  In order to avoid hashed filename collisions, the filename
  is now built with a hash of the msgid concatenated to the
  Epoch seconds of the From date. This gives a total of
  16 characters (all data is represented in hex). Only messages
  that have the same msgid and that arrive in the same second
  will have a collision.
  I also compiled with the Warning flags and removed some
  warnings.

 Jose Kahan (jose@w3.org) (October 2, 2002)
  The access righs of the msgindex file (for the hashed filenames)
  were not being set at all.

 Jose Kahan (jose@w3.org) (October 1, 2002)
  The non-sequential msgid mode didn't work when updating the
  archives by one message. Fixed a confusion in the generation of
  the msgindex file.

 Jose Kahan (jose@w3.org) (September 26, 2002)
  Cleaned the autoconf files for passing the libnvf compile parameters
  (what a difference does reading the manual make).

 Jose Kahan (jose@w3.org) (September 25, 2002)
  Commited the ~/hypermail/ltmain.sh file and also put it in the
  FILES section. Somehow, without this file, it was impossible to
  compile the file generated thru a make tgz. The same kind of
  file already existed in the pcre and fnv directories.
  Added a rule to pass the FNV optional CFLAGS from the 
  ~/hypermail/Makefile file, so that you can do a make from the top-level
  (previously, you had to do it in the src directory... oops!).

 Jose Kahan (jose@w3.org) (September 25, 2002)
  Updated the FILES tgz file (added libfnv, removed two non-existent
  tests).
  Fixed the make tgz rule (how long was it since it was last used?)

 Jose Kahan (jose@w3.org) (September 25, 2002)
  Added a new option to compute the archived filenames using an fnv hash
  of the msgid + received From date. The resulting filename is 8 bytes long
  (a space of 2^32 bits) + the extension. You can eventually change it to