@@ -1,6 +1,13 @@
 Version Changes for Hypermail
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ Jose Kahan (jose@w3.org) (October 17, 2002)
+  URL generation was broken when a URL had a '@' char and hypermail
+  was using the mailcommand option. parseemail() didn't take this
+  case into account yet (there's just an empty statement). I added a
+  quick patch to convert the '@' into an HTML entity when doing the
+  convertion inside a URL. The change is in translateurl().
+
  Jose Kahan (jose@w3.org) (October 2, 2002)
   In order to avoid hashed filename collisions, the filename
   is now built with a hash of the msgid concatenated to the
